--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">BaseFrame_Kotlin</string>
+    <string name="app_name">Gank For Kotlin</string>
     <string name="str_progress_msg_load">加载中...</string>
 </resources>
